--- a/MBTIApp/app/src/main/res/values/strings.xml
+++ b/MBTIApp/app/src/main/res/values/strings.xml
@@ -38,6 +38,8 @@
     <string name="dialog_invalid_register_positive">Oke</string>
     <string name="dialog_mbti_positive">Ayo Login!</string>
     <string name="dialog_logout_negative">Batal</string>
+    <string name="dialog_register_complete_message">Akun berhasil terdaftar, ayo lanjut ke tes MBTI kamu!</string>
+    <string name="dialog_register_complete_positive">Ayo!</string>
     <string name="btn_next">Selanjutnya</string>
     <string name="btn_finish">Selesai</string>
     <string name="example_tv_question">Apakah Anda lebih suka membaca buku daripada menonton video</string>
