--- a/MBTIApp/app/src/main/res/values/strings.xml
+++ b/MBTIApp/app/src/main/res/values/strings.xml
@@ -40,6 +40,7 @@
     <string name="dialog_logout_negative">Batal</string>
     <string name="dialog_register_complete_message">Akun berhasil terdaftar, ayo lanjut ke tes MBTI kamu!</string>
     <string name="dialog_register_complete_positive">Ayo!</string>
+    <string name="dialog_invalid_register_password">Password tidak sama</string>
     <string name="btn_next">Selanjutnya</string>
     <string name="btn_finish">Selesai</string>
     <string name="example_tv_question">Apakah Anda lebih suka membaca buku daripada menonton video</string>
@@ -49,6 +50,8 @@
     <string name="example_total_question">1</string>
     <string name="toast_welcome">Selamat datang, %1$s</string>
     <string name="toast_login_btn_press_again">Tekan login sekali lagi</string>
+    <string name="toast_register_btn_press_again">Tekan register sekali lagi</string>
+    <string name="toast_register_email_exists">Email sudah terdaftar</string>
     <string name="toast_login_wrong_cridential">Email atau password tidak ditemukan</string>
 
 </resources>
