Change MBTI Activity from 1-5 to Y/N

--- a/MBTIApp/app/src/main/res/values/strings.xml
+++ b/MBTIApp/app/src/main/res/values/strings.xml
@@ -53,5 +53,7 @@
     <string name="toast_register_btn_press_again">Tekan register sekali lagi</string>
     <string name="toast_register_email_exists">Email sudah terdaftar</string>
     <string name="toast_login_wrong_cridential">Email atau password tidak ditemukan</string>
+    <string name="mbti_rb_yes">Yes</string>
+    <string name="mbti_rb_no">No</string>
 
 </resources>
