--- a/MBTIApp/app/src/main/res/values/strings.xml
+++ b/MBTIApp/app/src/main/res/values/strings.xml
@@ -54,6 +54,7 @@
     <string name="toast_register_btn_press_again">Tekan register sekali lagi</string>
     <string name="toast_register_email_exists">Email sudah terdaftar</string>
     <string name="toast_login_wrong_cridential">Email atau password tidak ditemukan</string>
+    <string name="toast_login_form_invalid">Silahkan isi email dan password terlebih dahulu</string>
     <string name="mbti_rb_yes">Yes</string>
     <string name="mbti_rb_no">No</string>
 
